--- a/ambientAppindex.css
+++ b/ambientAppindex.css
@@ -55,7 +55,8 @@ html, body{
       font-weight: lighter;
       text-transform: uppercase;
       /* background-repeat: repeat; */
-      background-size: 100%;
+      background-size: 100%; 
+        color: #ffff;
     
     }  
   
@@ -80,7 +81,7 @@ html, body{
         
       
       /* color: #ffff; */
-    
+       color: #ffff;
       background-image: url('gold-foil-texture.jpg');
       background-repeat: repeat;
       -webkit-background-clip: text;
@@ -125,6 +126,7 @@ html, body{
       text-transform: uppercase;
       /* background-repeat: repeat; */
       background-size: 100%;
+        color: #ffff;
     
   }
     
@@ -209,6 +211,7 @@ html, body{
       -webkit-background-clip: text;
       background-clip: text;
       -webkit-text-fill-color: transparent;
+       color: #ffff;
       }
       
     
@@ -216,7 +219,7 @@ html, body{
         font-family: 'Montserrat', sans-serif;
         font-size: 24px;  
         margin: 4px;
-        
+        color: #ffff;
       } 
     
     
@@ -225,6 +228,7 @@ html, body{
         font-size:22px;
         font-weight: bold; 
         margin: 4px;
+        color: #ffff;
       }  
     
       .feelsLike{
@@ -232,6 +236,7 @@ html, body{
         font-family: 'Montserrat', sans-serif;
         font-size:16px;
         margin-bottom: 8px;
+        color: #ffff;
       }
     
     
