--- a/ambientAppindex.css
+++ b/ambientAppindex.css
@@ -210,7 +210,7 @@ html, body{
       background-repeat: repeat;
       -webkit-background-clip: text;
       background-clip: text;
-      -webkit-text-fill-color: transparent;
+      /*-webkit-text-fill-color: transparent;*/
        color: #ffff;
       }
       
