--- a/ambientAppindex.css
+++ b/ambientAppindex.css
@@ -43,7 +43,9 @@ html, body{
     .app-header{
         /*background-color: #efefef;*/
         box-shadow: 3px 3px 10px #1c1c1b; 
-        border-radius: 5px;
+        border-radius: 5px; 
+        background-color: #36096d;
+        background-image: linear-gradient(315deg, #36096d 0%, #37d5d6 74%);
        /* background-image: linear-gradient(315deg, #faac88 0%, #f7b689 30%,#faac88 74%);*/
         /*background-image: url('gold-foil-texture.jpg');*/
       
