--- a/ambientAppindex.css
+++ b/ambientAppindex.css
@@ -126,7 +126,7 @@ html, body{
         box-sizing: border-box;
       margin: 0;
       padding: 0;
-      background-image: url('gold-foil-texture.jpg');
+     /* background-image: url('gold-foil-texture.jpg');*/
       
       background-repeat: repeat;
       -webkit-background-clip: text;
@@ -276,7 +276,7 @@ html, body{
       background-color: #36096d;
     background-image: linear-gradient(315deg, #752ad0 0%, #37d5d6 74%);
     color: #ffff;
-    /* background-image: url(gold-foil-texture.jpg); */
+ 
     
       background-repeat: repeat;
       -webkit-background-clip: text;
@@ -426,7 +426,7 @@ html, body{
   .app-footer {
   
       margin-bottom: 112px;
-      background-image: url(gold-foil-texture.jpg);
+     /* background-image: url(gold-foil-texture.jpg);*/
       background-repeat: repeat;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
