--- a/ambientAppindex2.css
+++ b/ambientAppindex2.css
@@ -7,6 +7,7 @@ html, body{
     font-family: 'Montserrat', sans-serif;
     display: flex; 
     flex-direction: column;
+    width: 100%;
     } 
     
     
@@ -15,7 +16,8 @@ html, body{
       flex: 1 0 auto;
       background-color: #485461;
       background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
-      color:white;
+      color:white; 
+      width: 100%;
     
     }
     
