--- a/ambientAppindex2.css
+++ b/ambientAppindex2.css
@@ -378,7 +378,7 @@ html, body{
     
       .grid .item p{
     
-        font-family: 'Lato', sans-serif;
+        font-family: 'Montserrat', sans-serif;
         font-size: 14px; 
         margin-bottom: 20px;
         align-self: center;
